# ProactiveRobot

./: .gitignore  README.md
DashboardRecognition/: download.py  inference.py  make_coco.py  meter3.json  undistort.ipynb
DashboardRecognition/JSON2YOLO-master/: .gitignore  general_json2yolo.py
DashboardRecognition/PointerDetection/: .gitignore  README.md  extract_digits.py  inference.py  make_dataset.py  test.py  utils.py
DashboardRecognition/paddleOCR/: extract_digits.py  test.py
DockMode/: readme.md
ExplainableGeneralization/: expr.ipynb
ExplainableGeneralization/ContrastiveLearning/: expr.ipynb
ExplainableGeneralization/VQ-VAE/: README.md  main.py  train_mnist.sh
ExplainableGeneralization/VQ_VAE/: expr.ipynb  train_mnist.sh
FollowMe/: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
FollowMe/app/: build.gradle
FollowMe/app/src/main/cpp/: CMakeLists.txt  nano_track.cpp  nano_track.h  native-lib.cpp  utils.h  yolo_tracker.cpp  yolo_tracker.h
FollowMe/cv/: build.gradle
LearningDetectionByTracking/tracking_by_detection/: nano_track.h  tracking_by_detection.vcxproj  yolo_tracker.h
LearningDetectionByTracking/x64/Release/: CMakeLists.txt
LearningDetectionByTracking/x64/Release/models/SiamRPN/: list.txt
OnlineLearner/: README.md  cifar-10.ipynb  models.py  test.py  utils.py
OnlineLearner/CIFAR10-ResNet18-main/: expr.ipynb  main.py
Panel/: download.py  make_coco.py  panel.ipynb
TrackByDectionViceVersa/: TODO-LIST.txt
tracking_by_detection_versa/: .gitignore  tracking_by_detection.sln
(+8332 files in other folders)
